[tool.poetry]
name = "vartrie"
version = "0.1.0"
description = "VarTrie - prefix trie with set of forms for each character"
authors = ["ohtie <butvin.mihail@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
